# taudio-waa_flutter

./: .metadata  .pubignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
example/winuwp/: CMakeLists.txt
example/winuwp/runner_uwp/: CMakeLists.txt
ios/: taudio_waa.podspec
ios/Classes/: TaudioWaa.h  TaudioWaa.mm  TaudioWaaPlugin.h  TaudioWaaPlugin.mm  taudio_waa.cpp.sav
lib/: taudio_waa.dart  taudio_waa_bindings_generated.dart
lib/public/: web_audio.dart
linux/: CMakeLists.txt  taudio_waa_plugin.cc
linux/include/taudio_waa/: taudio_waa_plugin.h
macos/: taudio_waa.podspec
macos/Classes/: TaudioWaaPlugin.swift  taudio_waa.c
src/: CMakeLists.txt  taudio_waa.c  taudio_waa.h
test/: taudio_waa_test.dart
windows/: CMakeLists.txt  taudio_waa_plugin.cpp  taudio_waa_plugin.h  taudio_waa_plugin_c_api.cpp
(+7 files in other folders)
